new branch for ir_plus-2.3 code created from ir_plus-2.1 branch which has 2.2 changes